Updated Copyrights to Current. Updated license to GPL3 CodeQL Updates