@@ -1,22 +1,52 @@
 /*
- * Copyright (c) 2019-2022 - The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2019-2025 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMekLab.
  *
  * MegaMekLab is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
  *
  * MegaMekLab is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with MegaMekLab. If not, see <http://www.gnu.org/licenses/>.
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
  */
 package megameklab.ui.supportVehicle;
+
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.util.Arrays;
+import java.util.EnumMap;
+import java.util.List;
+import java.util.Map;
+import java.util.ResourceBundle;
+import java.util.concurrent.CopyOnWriteArrayList;
+import javax.swing.DefaultComboBoxModel;
+import javax.swing.JButton;
+import javax.swing.JCheckBox;
+import javax.swing.JComboBox;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import javax.swing.JSpinner;
+import javax.swing.SpinnerNumberModel;
+import javax.swing.event.ChangeEvent;
+import javax.swing.event.ChangeListener;
 
 import megamek.common.*;
 import megamek.common.verifier.TestSupportVehicle;
@@ -25,34 +55,26 @@ import megameklab.ui.listeners.SVBuildListener;
 import megameklab.ui.util.CustomComboBox;
 import megameklab.ui.util.TechComboBox;
 
-import javax.swing.*;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
-import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.util.List;
-import java.util.*;
-import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
-
 /**
  * Chassis panel for support vehicles
  */
 public class SVChassisView extends BuildView implements ActionListener, ChangeListener {
 
     private final List<SVBuildListener> listeners = new CopyOnWriteArrayList<>();
+
     public void addListener(SVBuildListener l) {
         listeners.add(l);
     }
+
     public void removeListener(SVBuildListener l) {
         listeners.remove(l);
     }
 
     /** Subset of possible types that does not include those that are not yet supported */
     private final List<TestSupportVehicle.SVType> SV_TYPES = Arrays.stream(TestSupportVehicle.SVType.values())
-            .filter(t -> !t.equals(TestSupportVehicle.SVType.AIRSHIP)
-                    && !t.equals(TestSupportVehicle.SVType.SATELLITE)).collect(Collectors.toList());
+                                                                   .filter(t -> !t.equals(TestSupportVehicle.SVType.AIRSHIP) &&
+                                                                                      !t.equals(TestSupportVehicle.SVType.SATELLITE))
+                                                                   .toList();
     private final Map<TestSupportVehicle.SVType, String> typeNames = new EnumMap<>(TestSupportVehicle.SVType.class);
 
     private final static TechAdvancement TA_DUAL_TURRET = Tank.getDualTurretTA();
@@ -71,9 +93,14 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
     private final JSpinner spnTonnage = new JSpinner(spnTonnageModel);
     private final JCheckBox chkSmall = new JCheckBox();
     private final CustomComboBox<Integer> cbStructureTechRating = new CustomComboBox<>(ITechnology::getRatingName);
-    private final CustomComboBox<TestSupportVehicle.SVType> cbType = new CustomComboBox<>(t -> typeNames.getOrDefault(t, "?"));
+    private final CustomComboBox<TestSupportVehicle.SVType> cbType = new CustomComboBox<>(t -> typeNames.getOrDefault(t,
+          "?"));
     private final TechComboBox<TestSupportVehicle.SVEngine> cbEngine = new TechComboBox<>(e -> e.engine.getEngineName()
-            .replaceAll("^\\d+ ", "").replace("[SV]", ""));
+                                                                                                     .replaceAll(
+                                                                                                           "^\\d+ ",
+                                                                                                           "")
+                                                                                                     .replace("[SV]",
+                                                                                                           ""));
     private final CustomComboBox<Integer> cbEngineTechRating = new CustomComboBox<>(ITechnology::getRatingName);
     private final CustomComboBox<Integer> cbTurrets = new CustomComboBox<>(i -> turretNames[i]);
     private final JCheckBox chkSponson = new JCheckBox();
@@ -114,8 +141,8 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridy = 0;
         gbc.fill = GridBagConstraints.HORIZONTAL;
         gbc.anchor = GridBagConstraints.WEST;
-        add(createLabel(resourceMap, "lblTonnage", "SVChassisView.spnTonnage.text",
-                "SVChassisView.spnTonnage.tooltip"), gbc);
+        add(createLabel(resourceMap, "lblTonnage", "SVChassisView.spnTonnage.text", "SVChassisView.spnTonnage.tooltip"),
+              gbc);
         gbc.gridx = 1;
         spnTonnage.setToolTipText(resourceMap.getString("SVChassisView.spnTonnage.tooltip"));
         add(spnTonnage, gbc);
@@ -134,8 +161,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridwidth = 2;
         gbc.gridy++;
-        add(createLabel(resourceMap, "lblStructureTechRating", "SVChassisView.cbStructureTechRating.text",
-                "SVChassisView.cbStructureTechRating.tooltip"), gbc);
+        add(createLabel(resourceMap,
+              "lblStructureTechRating",
+              "SVChassisView.cbStructureTechRating.text",
+              "SVChassisView.cbStructureTechRating.tooltip"), gbc);
         gbc.gridx = 2;
         gbc.gridwidth = 1;
         cbStructureTechRating.setToolTipText(resourceMap.getString("SVChassisView.cbStructureTechRating.tooltip"));
@@ -147,8 +176,7 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridwidth = 1;
         gbc.gridy++;
-        add(createLabel(resourceMap, "lblType", "SVChassisView.cbType.text",
-                "SVChassisView.cbType.tooltip"), gbc);
+        add(createLabel(resourceMap, "lblType", "SVChassisView.cbType.text", "SVChassisView.cbType.tooltip"), gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         cbType.setToolTipText(resourceMap.getString("SVChassisView.cbType.tooltip"));
@@ -160,8 +188,8 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridwidth = 1;
         gbc.gridy++;
-        add(createLabel(resourceMap, "lblEngine", "SVChassisView.cbEngine.text",
-                "SVChassisView.cbEngine.tooltip"), gbc);
+        add(createLabel(resourceMap, "lblEngine", "SVChassisView.cbEngine.text", "SVChassisView.cbEngine.tooltip"),
+              gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         cbEngine.setToolTipText(resourceMap.getString("SVChassisView.cbEngine.tooltip"));
@@ -175,8 +203,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridwidth = 2;
         gbc.gridy++;
-        add(createLabel(resourceMap, "lblEngineTechRating", "SVChassisView.cbEngineTechRating.text",
-                "SVChassisView.cbEngineTechRating.tooltip"), gbc);
+        add(createLabel(resourceMap,
+              "lblEngineTechRating",
+              "SVChassisView.cbEngineTechRating.text",
+              "SVChassisView.cbEngineTechRating.tooltip"), gbc);
         gbc.gridx = 2;
         gbc.gridwidth = 1;
         cbEngineTechRating.setToolTipText(resourceMap.getString("SVChassisView.cbEngineTechRating.tooltip"));
@@ -187,8 +217,8 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridy++;
         gbc.gridwidth = 1;
-        add(createLabel(resourceMap, "lblTurrets", "CVChassisView.cbTurrets.text",
-                "CVChassisView.cbTurrets.tooltip"), gbc);
+        add(createLabel(resourceMap, "lblTurrets", "CVChassisView.cbTurrets.text", "CVChassisView.cbTurrets.tooltip"),
+              gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         cbTurrets.setToolTipText(resourceMap.getString("CVChassisView.cbTurrets.tooltip"));
@@ -239,8 +269,8 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridy++;
         gbc.gridwidth = 1;
-        add(createLabel(resourceMap, "lblFireCon", "SVChassisView.cbFireCon.text",
-                "SVChassisView.cbFireCon.tooltip"), gbc);
+        add(createLabel(resourceMap, "lblFireCon", "SVChassisView.cbFireCon.text", "SVChassisView.cbFireCon.tooltip"),
+              gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         cbFireControl.setToolTipText(resourceMap.getString("SVChassisView.cbFireCon.tooltip"));
@@ -270,8 +300,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridy++;
         gbc.gridwidth = 1;
-        omniPanel.add(createLabel(resourceMap, "lblTurret1Wt", "SVChassisView.spnTurret1Wt.text",
-                "CVChassisView.spnTurretWt.tooltip"), gbc);
+        omniPanel.add(createLabel(resourceMap,
+              "lblTurret1Wt",
+              "SVChassisView.spnTurret1Wt.text",
+              "CVChassisView.spnTurretWt.tooltip"), gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         spnChassisTurretWt.setToolTipText(resourceMap.getString("CVChassisView.spnTurretWt.tooltip"));
@@ -281,8 +313,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridy++;
         gbc.gridwidth = 1;
-        omniPanel.add(createLabel(resourceMap, "lblTurret2Wt", "SVChassisView.spnTurret2Wt.text",
-                "CVChassisView.spnTurret2Wt.tooltip"), gbc);
+        omniPanel.add(createLabel(resourceMap,
+              "lblTurret2Wt",
+              "SVChassisView.spnTurret2Wt.text",
+              "CVChassisView.spnTurret2Wt.tooltip"), gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         spnChassisTurret2Wt.setToolTipText(resourceMap.getString("CVChassisView.spnTurret2Wt.tooltip"));
@@ -292,8 +326,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridy++;
         gbc.gridwidth = 1;
-        omniPanel.add(createLabel(resourceMap, "lblSponsonPintleWt", "SVChassisView.spnSponsonPintleWt.text",
-                "SVChassisView.spnSponsonPintleWt.tooltip"), gbc);
+        omniPanel.add(createLabel(resourceMap,
+              "lblSponsonPintleWt",
+              "SVChassisView.spnSponsonPintleWt.text",
+              "SVChassisView.spnSponsonPintleWt.tooltip"), gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         spnChassisSponsonPintleWt.setToolTipText(resourceMap.getString("SVChassisView.spnSponsonPintleWt.tooltip"));
@@ -303,8 +339,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         gbc.gridx = 0;
         gbc.gridy++;
         gbc.gridwidth = 1;
-        omniPanel.add(createLabel(resourceMap, "lblFireConWt", "SVChassisView.spnFireConWt.text",
-                "SVChassisView.spnFireConWt.tooltip"), gbc);
+        omniPanel.add(createLabel(resourceMap,
+              "lblFireConWt",
+              "SVChassisView.spnFireConWt.text",
+              "SVChassisView.spnFireConWt.tooltip"), gbc);
         gbc.gridx = 1;
         gbc.gridwidth = 2;
         spnFireConWt.setToolTipText(resourceMap.getString("SVChassisView.spnFireConWt.tooltip"));
@@ -323,8 +361,10 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
 
     /**
      * Convenience method to convert weight values to tons based on whether the small size box is checked.
+     *
      * @param weight The weight value in either the ton or kg standard as determined by the checkbox
-     * @return       The weight in tons
+     *
+     * @return The weight in tons
      */
     private double convertWeight(double weight) {
         if (chkSmall.isSelected()) {
@@ -348,13 +388,13 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
      */
     private boolean isAeroType() {
         final TestSupportVehicle.SVType type = getType();
-        return type == TestSupportVehicle.SVType.FIXED_WING
-                || type == TestSupportVehicle.SVType.AIRSHIP
-                || type == TestSupportVehicle.SVType.SATELLITE;
+        return type == TestSupportVehicle.SVType.FIXED_WING ||
+                     type == TestSupportVehicle.SVType.AIRSHIP ||
+                     type == TestSupportVehicle.SVType.SATELLITE;
     }
 
     /**
-     * @return The currently selected structural tech rating, or A if none is selected.
+     * @return The currently selected structural tech rating, or A of none, is selected.
      */
     private int getStructuralTechRating() {
         if (cbStructureTechRating.getSelectedItem() != null) {
@@ -365,7 +405,7 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
     }
 
     /**
-     * @return The currently selected engine tech rating, or A if none is selected.
+     * @return The currently selected engine tech rating, or A of none, is selected.
      */
     private int getEngineTechRating() {
         if (cbEngineTechRating.getSelectedItem() != null) {
@@ -376,7 +416,8 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
     }
 
     /**
-     * @return The currently selected engine type, or {@link TestSupportVehicle.SVEngine#COMBUSTION COMBUSTION} if none is selected
+     * @return The currently selected engine type, or {@link TestSupportVehicle.SVEngine#COMBUSTION COMBUSTION} if none
+     *       is selected
      */
     private TestSupportVehicle.SVEngine getEngineType() {
         if (cbEngine.getSelectedItem() != null) {
@@ -404,8 +445,7 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         cbEngine.removeActionListener(this);
         cbEngine.removeAllItems();
         for (TestSupportVehicle.SVEngine engine : TestSupportVehicle.SVEngine.values()) {
-            if (techManager.isLegal(engine)
-                    && engine.isValidFor(entity)) {
+            if (techManager.isLegal(engine) && engine.isValidFor(entity)) {
                 cbEngine.addItem(engine);
             }
         }
@@ -444,13 +484,13 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
             cbEngine.setSelectedIndex(0);
         }
 
-        if (entity instanceof Tank) {
-            Tank tank = (Tank) entity;
+        if (entity instanceof Tank tank) {
             if (!tank.hasNoDualTurret()) {
                 cbTurrets.setSelectedItem(SVBuildListener.TURRET_DUAL);
             } else if (!tank.hasNoTurret()) {
                 cbTurrets.setSelectedItem((tank.getMovementMode() == EntityMovementMode.VTOL) ?
-                        SVBuildListener.TURRET_CHIN : SVBuildListener.TURRET_SINGLE);
+                                                SVBuildListener.TURRET_CHIN :
+                                                SVBuildListener.TURRET_SINGLE);
             } else {
                 cbTurrets.setSelectedItem(SVBuildListener.TURRET_NONE);
             }
@@ -499,13 +539,19 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         }
 
         omniPanel.setVisible(true);
-        spnChassisTurretWt.setEnabled(!entity.isAero() && entity.isOmni()
-                && (cbTurrets.getSelectedIndex() > SVBuildListener.TURRET_NONE));
-        spnChassisTurret2Wt.setEnabled(!entity.isAero() && entity.isOmni()
-                && Integer.valueOf(SVBuildListener.TURRET_DUAL).equals(cbTurrets.getSelectedItem()));
-        spnChassisSponsonPintleWt.setEnabled(!entity.isAero()
-            && (chkSponson.isSelected()
-            || chkPintleLeft.isSelected() || chkPintleRight.isSelected() || chkPintleFront.isSelected() || chkPintleRear.isSelected()));
+        spnChassisTurretWt.setEnabled(!entity.isAero() &&
+                                            entity.isOmni() &&
+                                            (cbTurrets.getSelectedIndex() > SVBuildListener.TURRET_NONE));
+        spnChassisTurret2Wt.setEnabled(!entity.isAero() &&
+                                             entity.isOmni() &&
+                                             Integer.valueOf(SVBuildListener.TURRET_DUAL)
+                                                   .equals(cbTurrets.getSelectedItem()));
+        spnChassisSponsonPintleWt.setEnabled(!entity.isAero() &&
+                                                   (chkSponson.isSelected() ||
+                                                          chkPintleLeft.isSelected() ||
+                                                          chkPintleRight.isSelected() ||
+                                                          chkPintleFront.isSelected() ||
+                                                          chkPintleRear.isSelected()));
         spnFireConWt.setEnabled(entity.isOmni() && (cbFireControl.getSelectedIndex() > SVBuildListener.FIRECON_NONE));
     }
 
@@ -543,8 +589,8 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
             }
         } else if (!isAeroType()) {
             cbTurrets.addItem(SVBuildListener.TURRET_SINGLE);
-            if (!TestSupportVehicle.SVType.WIGE.equals(cbType.getSelectedItem())
-                    && techManager.isLegal(TA_DUAL_TURRET)) {
+            if (!TestSupportVehicle.SVType.WIGE.equals(cbType.getSelectedItem()) &&
+                      techManager.isLegal(TA_DUAL_TURRET)) {
                 cbTurrets.addItem(SVBuildListener.TURRET_DUAL);
             }
         }
@@ -574,11 +620,9 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
 
     private void refreshSideTurrets() {
         final boolean showSponson = TestSupportVehicle.sponsonLegal((TestSupportVehicle.SVType) cbType.getSelectedItem(),
-                chkSmall.isSelected())
-                && techManager.isLegal(EquipmentType.get(EquipmentTypeLookup.SPONSON_TURRET));
+              chkSmall.isSelected()) && techManager.isLegal(EquipmentType.get(EquipmentTypeLookup.SPONSON_TURRET));
         final boolean showPintle = TestSupportVehicle.pintleLegal((TestSupportVehicle.SVType) cbType.getSelectedItem(),
-                chkSmall.isSelected())
-                && techManager.isLegal(EquipmentType.get(EquipmentTypeLookup.PINTLE_TURRET));
+              chkSmall.isSelected()) && techManager.isLegal(EquipmentType.get(EquipmentTypeLookup.PINTLE_TURRET));
         chkSponson.setVisible(showSponson);
         lblPintle.setVisible(showPintle);
         chkPintleLeft.setVisible(showPintle);
@@ -624,8 +668,11 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
         spnTurret2WtModel.setMaximum(max);
         spnSponsonPintleWtModel.setMaximum(max);
         spnFireConWtModel.setMaximum(max);
-        spnChassisSponsonPintleWt.setEnabled(chkSponson.isSelected()
-            || chkPintleLeft.isSelected() || chkPintleRight.isSelected() || chkPintleFront.isSelected() || chkPintleRear.isSelected());
+        spnChassisSponsonPintleWt.setEnabled(chkSponson.isSelected() ||
+                                                   chkPintleLeft.isSelected() ||
+                                                   chkPintleRight.isSelected() ||
+                                                   chkPintleFront.isSelected() ||
+                                                   chkPintleRear.isSelected());
 
         spnTonnage.addChangeListener(this);
         spnChassisTurretWt.addChangeListener(this);
@@ -721,13 +768,12 @@ public class SVChassisView extends BuildView implements ActionListener, ChangeLi
     public void stateChanged(ChangeEvent e) {
         if (e.getSource() == spnTonnage) {
             listeners.forEach(l -> l.tonnageChanged(convertWeight((double) spnTonnage.getValue())));
-        } else if ((e.getSource() == spnChassisTurretWt)
-                || (e.getSource() == spnChassisTurret2Wt)) {
-            listeners.forEach(l -> l.turretBaseWtChanged(
-                    convertWeight(spnTurretWtModel.getNumber().doubleValue()),
-                    convertWeight(spnTurret2WtModel.getNumber().doubleValue())));
+        } else if ((e.getSource() == spnChassisTurretWt) || (e.getSource() == spnChassisTurret2Wt)) {
+            listeners.forEach(l -> l.turretBaseWtChanged(convertWeight(spnTurretWtModel.getNumber().doubleValue()),
+                  convertWeight(spnTurret2WtModel.getNumber().doubleValue())));
         } else if (e.getSource() == spnChassisSponsonPintleWt) {
-            listeners.forEach(l -> l.sponsonPintleBaseWtChanged(convertWeight(spnSponsonPintleWtModel.getNumber().doubleValue())));
+            listeners.forEach(l -> l.sponsonPintleBaseWtChanged(convertWeight(spnSponsonPintleWtModel.getNumber()
+                                                                                    .doubleValue())));
         } else if (e.getSource() == spnFireConWt) {
             listeners.forEach(l -> l.fireConWtChanged(convertWeight(spnFireConWtModel.getNumber().doubleValue())));
         }
